--- a/views/motocicletas/list.ejs
+++ b/views/motocicletas/list.ejs
@@ -2,8 +2,8 @@
 <h1 class="title">MOTOS</h1>
 <div class="columns">
     <% if(marcas.length > 0) {%>
-        <% for(let marca of marcas){ %>
-            <div class"columns">
+        <% for(let marcas of marcas){ %>
+            <div class="columns">
                 <div class="card">
                     <div class="card-image">
                         <figure class="image is-4by3">
@@ -29,7 +29,6 @@
                         </div>
                     </div>
                 </div>
-                </div>divZ
                 <% } %>
                 <% } else { %>
                     <h2>No hay MOTOS.</h2>
