--- a/views/new.html
+++ b/views/new.html
@@ -69,7 +69,7 @@
                 <h2 class="title is-4">Registra tu Marca favorita</h2>
 
 
-                <form action="/new" method="POST">
+                <form action="/motos/new" method="POST">
     <label for="nombre">Nombre de la marca</label>
     <input id="nombre" name="nombre" class="input" type="text" placeholder="Escribe aquí">
     <br><br>
