--- a/views/motocicletas/list.ejs
+++ b/views/motocicletas/list.ejs
@@ -35,5 +35,5 @@
         <h2>No hay MOTOS.</h2>
     <% } %>
 </div>
-
+Tiempo desde el último acceso: <%= tiempo_transcurrido %> segundos.
 <%- include('../includes/foot.ejs') %>
