--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -11,10 +11,15 @@
     <header>
         <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
             <div class="navbar-brand">
-                <a class="navbar-item" href="#">
-                    <figure class="image is 20x20">
-                        <img src="https://w7.pngwing.com/pngs/864/664/png-transparent-fox-logo-fox-racing-logo-desktop-blue-motocross-blue-angle-white-thumbnail.png" alt="Motocross" width="95" height="200">
-                    </figure>
+                <span class="navbar-item">
+                    <%= username %>
+                </span>
+                <a class="navbar-item" href="/motocicletas">
+                    Motocicletas
+                </a>
+                <a class="navbar-item" href="/motocicletas/add">
+
+                </a>
                 </a>
                 <section class="section">
                     <div class="container">
@@ -25,6 +30,7 @@
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
+                    <span aria-hidden="true">Nombre</span>
                 </a>
                 </div>
                 <div class="tile"> 
