--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -18,7 +18,7 @@
                     Motocicletas
                 </a>
                 <a class="navbar-item" href="/motocicletas/add">
-
+                    Registrar
                 </a>
                 </a>
                 <section class="section">
