--- a/views/motocicletas/add.ejs
+++ b/views/motocicletas/add.ejs
@@ -2,6 +2,7 @@
 
 <h1 class="title">Registrar Motos</h1>
 <form action="/motos/add" method="POST">
+    <label for="descripcion">Nombre de la Moto</label>
     <input id="nombre" name="nombre" class="input" type="text" placeholder="DUCATI">
     <br><br>
     <label for="descripcion">Descripcion</label>
