--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -3,13 +3,13 @@
 <h1 class="title"> Bienvenido </h1>
 
 <form action="/users/login" method="post">
-    <label for="username">Nombre del usuario;</label>
-    <input id="username" name="username" class="input is-primary" type="text" placeholder="Primary input">
+    <label for="username">Nombre del usuario:</label>
+    <input id="username" name="username" class="input is-primary" type="text" placeholder="Usuario">
     <br><br>
-    <label for="password">Password:</label>
-    <input id="password" name="password" class="input is-primary" type="password" placeholder="Primary input">
+    <label for="password">Contraseña:</label>
+    <input id="password" name="password" class="input is-primary" type="password" placeholder="Contraseña">
     <br><br>
     <input class="button is-primary" type="submit" value="Entrar">
 </form>
 
-<%- includes('../includes/foot.ejs') %>
+<%- include('../includes/foot.ejs') %>
