--- a/views/motocicletas/list.ejs
+++ b/views/motocicletas/list.ejs
@@ -20,6 +20,8 @@
                             </div>
                             <div class="media-content">
                                 <p class="title is-4"><%= marca.nombre %></p>
+                                <p class="title is-4"><a href="/motos/<%= motos.id %>"><%= motos.nombre %></a></p>
+
                             </div>
                         </div>
                         <div class="content">
