Base de datos, hay errores

--- a/views/motocicletas/list.ejs
+++ b/views/motocicletas/list.ejs
@@ -2,7 +2,7 @@
 
 <h1 class="title">MOTOS</h1>
 <div class="columns is-multiline">
-    <% if(marcas.length > 0) {%>
+    <% if(marcas && marcas.length > 0) {%>
         <% for(let marca of marcas){ %>
             <div class="column is-half">
                 <div class="card">
