Crear sesion de usuario y logica de la navbar

--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -21,6 +21,26 @@
                     Registrate
                 </a>
                 </a>
+                <div class="navbar-end">
+                    <div class="navbar-item">
+                        <div class="buttons">
+                            <% if (isLoggedIn == false) { %>
+                            <a class="button is-primary" href="/users/add">
+                                <strong>Registrar (es Gratis)</strong>
+                            </a>
+                            <a class="button is-light" href="/users/login">
+                                Entrar
+                            </a>
+                            <% } else { %>
+                            <a class="button is-danger" href="/users/logout">
+                                Salir
+                            </a>
+                            <% } % >
+                        </div>
+                    </div>
+                </div>
+
+
                 <section class="section">
                     <div class="container">
                         <h1 class="title is-5" style="color:white"> El Camino Motocicletas</h1>
