--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -26,16 +26,16 @@
                         <div class="buttons">
                             <% if (isLoggedIn == false) { %>
                             <a class="button is-primary" href="/users/add">
-                                <strong>Registrar (es Gratis)</strong>
+                                <strong>Registrar Usuario</strong>
                             </a>
                             <a class="button is-light" href="/users/login">
-                                Entrar
+                                Login
                             </a>
                             <% } else { %>
                             <a class="button is-danger" href="/users/logout">
                                 Salir
                             </a>
-                            <% } % >
+                            <% } %>
                         </div>
                     </div>
                 </div>
