--- a/views/motocicletas/add.ejs
+++ b/views/motocicletas/add.ejs
@@ -1,6 +1,6 @@
 <%- include('../includes/head.ejs') %>
 
-<h1 class="title">Registrar Motos</h1>
+<h1 class="title">Registrarte</h1>
 <form action="/motos/add" method="POST">
     <label for="descripcion">Nombre de la Moto</label>
     <input id="nombre" name="nombre" class="input" type="text" placeholder="DUCATI">
